update with x-auth in header and swagger doc
